[gd_scene load_steps=46 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://EditorTileset.tres" type="TileSet" id=2]
[ext_resource path="res://World.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Blocks/RedBackgrounTile.png" type="Texture" id=4]
[ext_resource path="res://dpcomic.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://HUD/HUD.gd" type="Script" id=6]
[ext_resource path="res://HUD/Minimap.gd" type="Script" id=7]
[ext_resource path="res://Sprites/Spells/Empty.png" type="Texture" id=8]
[ext_resource path="res://HUD/WandRenderRect.tscn" type="PackedScene" id=9]
[ext_resource path="res://Sprites/Items/Scraps.png" type="Texture" id=10]
[ext_resource path="res://RoomDecorations/Background.gd" type="Script" id=11]
[ext_resource path="res://HUD/PointNine.gd" type="Script" id=12]
[ext_resource path="res://HUD/Console.gd" type="Script" id=13]
[ext_resource path="res://HUD/Pause.gd" type="Script" id=14]
[ext_resource path="res://Sfx/death.wav" type="AudioStream" id=15]
[ext_resource path="res://Sprites/Achievements/OhWoahWhatsThis.png" type="Texture" id=16]
[ext_resource path="res://HUD/Achievement.gd" type="Script" id=17]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1
light_mode = 1

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.490196, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.180392, 0.694118, 1, 0.478431 )

[sub_resource type="DynamicFont" id=5]
size = 10
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=4]
content_margin_top = 3.0
content_margin_bottom = 0.0
bg_color = Color( 1, 0.529412, 0.85098, 0.466667 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_color = Color( 0.552941, 0.160784, 0.647059, 0.541176 )
corner_radius_top_left = 10
corner_radius_top_right = 2
anti_aliasing = false

[sub_resource type="DynamicFont" id=6]
size = 12
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=8]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.0745098, 0.0627451, 0.0627451, 1 )
border_width_left = 1
border_width_top = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 5
corner_radius_bottom_right = 10
corner_radius_bottom_left = 5
anti_aliasing = false

[sub_resource type="DynamicFont" id=9]
size = 12
use_mipmaps = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=10]
size = 10
use_mipmaps = true
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=11]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 2.0
bg_color = Color( 0.0745098, 0.0627451, 0.0627451, 1 )
border_width_left = 1
border_width_top = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 2
corner_radius_bottom_right = 5
corner_radius_bottom_left = 2
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.0862745, 0.0862745, 0.0862745, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0, 1, 0.976471, 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 1, 0.513726, 0, 1 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 1, 0.223529, 0.223529, 1 )

[sub_resource type="DynamicFont" id=17]
size = 10
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0, 0, 0, 0.329412 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0, 0, 0, 0.552941 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=21]
use_mipmaps = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=22]
size = 11
use_mipmaps = true
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0, 0, 0, 0.423529 )

[sub_resource type="DynamicFont" id=24]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=25]
size = 12
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=26]
size = 11
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=27]
size = 8
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=28]
resource_name = "Move"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.366021, 1 ),
"update": 0,
"values": [ Vector2( -128, 0 ), Vector2( 0, 0 ) ]
}

[node name="Game" type="Node2D"]

[node name="Background" type="CanvasLayer" parent="."]
layer = -24
follow_viewport_enable = true
script = ExtResource( 11 )

[node name="Following" type="Control" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg1" type="TextureRect" parent="Background/Following"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 400.0
margin_bottom = 225.0
texture = ExtResource( 4 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg2" type="TextureRect" parent="Background/Following"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 400.0
margin_bottom = 225.0
texture = ExtResource( 4 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg3" type="TextureRect" parent="Background/Following"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 400.0
margin_bottom = 225.0
texture = ExtResource( 4 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg4" type="TextureRect" parent="Background/Following"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 400.0
margin_bottom = 225.0
texture = ExtResource( 4 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg5" type="TextureRect" parent="Background/Following"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 400.0
margin_bottom = 225.0
texture = ExtResource( 4 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg6" type="TextureRect" parent="Background/Following"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 400.0
margin_bottom = 225.0
texture = ExtResource( 4 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg7" type="TextureRect" parent="Background/Following"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 400.0
margin_bottom = 225.0
texture = ExtResource( 4 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg8" type="TextureRect" parent="Background/Following"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 400.0
margin_bottom = 225.0
texture = ExtResource( 4 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg9" type="TextureRect" parent="Background/Following"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 400.0
margin_bottom = 225.0
texture = ExtResource( 4 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" type="CanvasLayer" parent="." groups=["HUD"]]
pause_mode = 2
script = ExtResource( 6 )

[node name="HUD" type="Control" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hot" type="Panel" parent="HUD/HUD"]
modulate = Color( 1, 1, 1, 0 )
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cold" type="Panel" parent="HUD/HUD"]
modulate = Color( 1, 1, 1, 0 )
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 3 )

[node name="LastItem" type="TextureRect" parent="HUD/HUD"]
margin_left = 4.0
margin_top = 184.0
margin_right = 20.0
margin_bottom = 200.0
rect_min_size = Vector2( 16, 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Minimap" type="Control" parent="HUD/HUD"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -53.0
margin_top = -53.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Messages" type="RichTextLabel" parent="HUD/HUD"]
anchor_left = 0.09
anchor_top = 0.85
anchor_right = 0.91
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 19.75
margin_right = -12.0
grow_vertical = 0
size_flags_vertical = 14
custom_colors/default_color = Color( 0.984314, 0.92549, 1, 1 )
custom_fonts/normal_font = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]broken leg[/center]"
text = "broken leg"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wands" type="HBoxContainer" parent="HUD/HUD"]
margin_left = 4.0
margin_top = 4.0
margin_right = 120.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot1" parent="HUD/HUD/Wands" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 16.0
margin_bottom = 16.0

[node name="Slot2" parent="HUD/HUD/Wands" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_right = 36.0
margin_bottom = 16.0

[node name="Slot3" parent="HUD/HUD/Wands" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_right = 56.0
margin_bottom = 16.0

[node name="Slot4" parent="HUD/HUD/Wands" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 60.0
margin_right = 76.0
margin_bottom = 16.0

[node name="Slot5" parent="HUD/HUD/Wands" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 80.0
margin_right = 96.0
margin_bottom = 16.0

[node name="Slot6" parent="HUD/HUD/Wands" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 100.0
margin_right = 116.0
margin_bottom = 16.0

[node name="CompanionWands" type="HBoxContainer" parent="HUD/HUD"]
margin_left = 140.0
margin_top = 4.0
margin_right = 256.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot1" parent="HUD/HUD/CompanionWands" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 16.0
margin_bottom = 24.0

[node name="Slot2" parent="HUD/HUD/CompanionWands" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_right = 36.0
margin_bottom = 24.0

[node name="Slot3" parent="HUD/HUD/CompanionWands" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_right = 56.0
margin_bottom = 24.0

[node name="Slot4" parent="HUD/HUD/CompanionWands" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 60.0
margin_right = 76.0
margin_bottom = 24.0

[node name="Slot5" parent="HUD/HUD/CompanionWands" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 80.0
margin_right = 96.0
margin_bottom = 24.0

[node name="Slot6" parent="HUD/HUD/CompanionWands" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 100.0
margin_right = 116.0
margin_bottom = 24.0

[node name="VisualizeDamage" type="CheckBox" parent="HUD/HUD/CompanionWands"]
margin_left = 120.0
margin_right = 222.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 6 )
text = "Visualize Damage"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstantDeathButton" type="CheckBox" parent="HUD/HUD/CompanionWands"]
margin_left = 226.0
margin_right = 345.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 6 )
text = "Instant Death Button"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spells" type="HBoxContainer" parent="HUD/HUD"]
margin_left = 4.0
margin_top = 25.0
margin_right = 120.0
margin_bottom = 41.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot1" type="TextureRect" parent="HUD/HUD/Spells"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 8 )

[node name="Slot2" type="TextureRect" parent="HUD/HUD/Spells"]
margin_left = 20.0
margin_right = 36.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 8 )

[node name="Slot3" type="TextureRect" parent="HUD/HUD/Spells"]
margin_left = 40.0
margin_right = 56.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 8 )

[node name="Slot4" type="TextureRect" parent="HUD/HUD/Spells"]
margin_left = 60.0
margin_right = 76.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 8 )

[node name="Slot5" type="TextureRect" parent="HUD/HUD/Spells"]
margin_left = 80.0
margin_right = 96.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 8 )

[node name="Slot6" type="TextureRect" parent="HUD/HUD/Spells"]
margin_left = 100.0
margin_right = 116.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 8 )

[node name="SpellBag" type="VBoxContainer" parent="HUD/HUD"]
margin_left = 4.0
margin_top = 62.0
margin_right = 20.0
margin_bottom = 178.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot1" type="TextureRect" parent="HUD/HUD/SpellBag"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 8 )

[node name="Slot2" type="TextureRect" parent="HUD/HUD/SpellBag"]
margin_top = 20.0
margin_right = 16.0
margin_bottom = 36.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 8 )

[node name="Slot3" type="TextureRect" parent="HUD/HUD/SpellBag"]
margin_top = 40.0
margin_right = 16.0
margin_bottom = 56.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 8 )

[node name="Slot4" type="TextureRect" parent="HUD/HUD/SpellBag"]
margin_top = 60.0
margin_right = 16.0
margin_bottom = 76.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 8 )

[node name="Slot5" type="TextureRect" parent="HUD/HUD/SpellBag"]
margin_top = 80.0
margin_right = 16.0
margin_bottom = 96.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 8 )

[node name="Slot6" type="TextureRect" parent="HUD/HUD/SpellBag"]
margin_top = 100.0
margin_right = 16.0
margin_bottom = 116.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 8 )

[node name="MouseSlot" type="TextureRect" parent="HUD/HUD"]
margin_left = 4.0
margin_top = 182.0
margin_right = 20.0
margin_bottom = 198.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 8 )

[node name="MouseWand" parent="HUD/HUD" instance=ExtResource( 9 )]
margin_top = -16.0
margin_bottom = -225.0

[node name="Scraps" type="TextureRect" parent="HUD/HUD"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -19.0
margin_right = 18.0
margin_bottom = -3.0
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Amount" type="Label" parent="HUD/HUD/Scraps"]
margin_left = 19.0
margin_top = 1.0
margin_right = 53.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 7 )
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Panel" parent="HUD/HUD"]
margin_left = 40.0
margin_top = 40.0
margin_right = 184.0
margin_bottom = 104.0
size_flags_horizontal = 5
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="HUD/HUD/Description"]
margin_left = 8.0
margin_top = 8.0
margin_right = 136.0
margin_bottom = 20.0
size_flags_horizontal = 5
custom_fonts/font = SubResource( 9 )
text = "Name"
autowrap = true

[node name="Description" type="Label" parent="HUD/HUD/Description"]
margin_left = 8.0
margin_top = 18.0
margin_right = 136.0
margin_bottom = 30.0
size_flags_horizontal = 5
custom_fonts/font = SubResource( 10 )
text = "Information"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShortDesc" type="Label" parent="HUD/HUD"]
margin_left = 37.0
margin_top = 40.0
margin_right = 71.0
margin_bottom = 59.0
size_flags_horizontal = 5
custom_fonts/font = SubResource( 9 )
custom_styles/normal = SubResource( 11 )
text = "Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointNine" type="Control" parent="HUD/HUD"]
anchor_left = 0.937
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.199986
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Border" type="Panel" parent="HUD/HUD/PointNine"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -17.0
margin_top = -129.0
margin_right = -7.0
margin_bottom = -7.0
custom_styles/panel = SubResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Soul" type="Panel" parent="HUD/HUD/PointNine"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -16.0
margin_top = -48.0
margin_right = -8.0
margin_bottom = -8.0
custom_styles/panel = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heat" type="Panel" parent="HUD/HUD/PointNine"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -16.0
margin_top = -88.0
margin_right = -8.0
margin_bottom = -48.0
custom_styles/panel = SubResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blood" type="Panel" parent="HUD/HUD/PointNine"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -16.0
margin_top = -128.0
margin_right = -8.0
margin_bottom = -88.0
custom_styles/panel = SubResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Console" type="VBoxContainer" parent="HUD/HUD"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -220.0
margin_bottom = 64.0
custom_constants/separation = 0
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Output" type="RichTextLabel" parent="HUD/HUD/Console"]
margin_right = 220.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/normal_font = SubResource( 17 )
custom_styles/normal = SubResource( 16 )
bbcode_enabled = true
scroll_following = true

[node name="Input" type="LineEdit" parent="HUD/HUD/Console"]
margin_top = 50.0
margin_right = 220.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
caret_blink = true

[node name="ControllerSelect" type="Panel" parent="HUD/HUD"]
margin_left = -8.0
margin_top = -8.0
custom_styles/panel = SubResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Death" type="Panel" parent="HUD/HUD"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="HUD/HUD/Death"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -56.0
margin_top = -166.0
margin_right = 56.0
margin_bottom = -150.0
custom_fonts/font = SubResource( 21 )
text = "You Are Dead"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="HUD/HUD/Death"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -132.0
margin_top = -40.0
margin_right = 132.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 22 )
text = "Cause of Death:
Run Length:
Seed:
Levels:

Press G to start a new run"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Generating" type="Panel" parent="HUD/HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Generating" type="Label" parent="HUD/HUD/Generating"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -56.0
margin_top = -30.0
margin_right = 56.0
margin_bottom = -14.0
custom_fonts/font = SubResource( 21 )
text = "Generating World"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsefulAdvice" type="Label" parent="HUD/HUD/Generating"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -132.0
margin_top = -48.0
margin_right = 132.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 22 )
text = "Avoid breaking your knees by not falling long distances"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="Panel" parent="HUD/HUD" groups=["PauseMenu"]]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 23 )
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="VBoxContainer" parent="HUD/HUD/Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -47.5
margin_top = -26.0
margin_right = 47.5
margin_bottom = 26.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="ToolButton" parent="HUD/HUD/Pause/Options"]
margin_right = 95.0
margin_bottom = 24.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.737255, 1, 0.968627, 1 )
custom_colors/font_color_pressed = Color( 1, 0.596078, 0.929412, 1 )
custom_fonts/font = SubResource( 24 )
text = "Settings"

[node name="DieInstantly" type="ToolButton" parent="HUD/HUD/Pause/Options"]
margin_top = 28.0
margin_right = 95.0
margin_bottom = 52.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.737255, 1, 0.968627, 1 )
custom_colors/font_color_pressed = Color( 1, 0.596078, 0.929412, 1 )
custom_fonts/font = SubResource( 24 )
text = "Die Instantly"

[node name="Settings" type="VBoxContainer" parent="HUD/HUD/Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -59.5
margin_top = -50.0
margin_right = 59.5
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoystickSensitivity" type="HSlider" parent="HUD/HUD/Pause/Settings"]
margin_right = 119.0
margin_bottom = 16.0
min_value = 1.0
max_value = 12.0
value = 1.0

[node name="Text" type="Label" parent="HUD/HUD/Pause/Settings/JoystickSensitivity"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -22.0
margin_right = 50.0
margin_bottom = -8.0
grow_horizontal = 2
custom_fonts/font = SubResource( 25 )
text = "Joystick Sensitivity: 12"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VisualizeDamage" type="CheckBox" parent="HUD/HUD/Pause/Settings"]
margin_top = 20.0
margin_right = 119.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 6 )
text = "Visualize Damage"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstantDeathButton" type="CheckBox" parent="HUD/HUD/Pause/Settings"]
margin_top = 48.0
margin_right = 119.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 6 )
text = "Instant Death Button"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="ToolButton" parent="HUD/HUD/Pause/Settings"]
margin_top = 76.0
margin_right = 119.0
margin_bottom = 100.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.737255, 1, 0.968627, 1 )
custom_colors/font_color_pressed = Color( 1, 0.596078, 0.929412, 1 )
custom_fonts/font = SubResource( 24 )
text = "Back"

[node name="DeathSFX" type="AudioStreamPlayer" parent="HUD/HUD"]
stream = ExtResource( 15 )
volume_db = -10.0

[node name="Achievement" type="Panel" parent="HUD/HUD"]
margin_left = -128.0
margin_right = -10.0
margin_bottom = 27.0
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Image" type="TextureRect" parent="HUD/HUD/Achievement"]
margin_left = 2.0
margin_top = 4.0
margin_right = 18.0
margin_bottom = 20.0
texture = ExtResource( 16 )

[node name="Text1" type="Label" parent="HUD/HUD/Achievement"]
margin_left = 22.0
margin_top = 4.0
margin_right = 116.0
margin_bottom = 15.0
custom_colors/font_color = Color( 0.388235, 1, 0.368627, 1 )
custom_fonts/font = SubResource( 26 )
text = "Achievement Unlocked!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="HUD/HUD/Achievement"]
margin_left = 22.0
margin_top = 17.0
margin_right = 116.0
margin_bottom = 25.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 27 )
text = "Oh Woah Whats This"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD/HUD/Achievement"]
anims/Move = SubResource( 28 )

[node name="Timer" type="Timer" parent="HUD/HUD/Achievement"]
wait_time = 2.0
one_shot = true

[node name="Player" parent="." groups=["Player"] instance=ExtResource( 1 )]
position = Vector2( 256, 200 )

[node name="World" type="TileMap" parent="." groups=["World"]]
tile_set = ExtResource( 2 )
cell_size = Vector2( 8, 8 )
collision_layer = 2
format = 1
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="." groups=["Camera"]]
position = Vector2( 256, 100 )
offset = Vector2( 0, -40 )
current = true
zoom = Vector2( 1.2, 1.2 )
drag_margin_top = 0.4
drag_margin_bottom = 0.4

[connection signal="focus_entered" from="HUD/HUD/Console/Input" to="HUD/HUD/Console" method="_on_Input_focus_entered"]
[connection signal="focus_exited" from="HUD/HUD/Console/Input" to="HUD/HUD/Console" method="_on_Input_focus_exited"]
[connection signal="pressed" from="HUD/HUD/Pause/Options/Settings" to="HUD/HUD/Pause" method="_on_Settings_pressed"]
[connection signal="value_changed" from="HUD/HUD/Pause/Settings/JoystickSensitivity" to="HUD/HUD/Pause" method="_on_JoystickSensitivity_value_changed"]
[connection signal="pressed" from="HUD/HUD/Pause/Settings/VisualizeDamage" to="HUD/HUD/Pause" method="_on_VisualizeDamage_pressed"]
[connection signal="pressed" from="HUD/HUD/Pause/Settings/InstantDeathButton" to="HUD/HUD/Pause" method="_on_InstantDeathButton_pressed"]
[connection signal="pressed" from="HUD/HUD/Pause/Settings/Back" to="HUD/HUD/Pause" method="_on_Back_pressed"]
[connection signal="timeout" from="HUD/HUD/Achievement/Timer" to="HUD/HUD/Achievement" method="_on_Timer_timeout"]
[connection signal="entity_died" from="Player" to="HUD" method="_on_player_died"]
[connection signal="generated_world" from="World" to="HUD" method="_on_generated_world"]
[connection signal="generated_world" from="World" to="HUD/HUD/Minimap" method="_on_generated_world"]
[connection signal="generated_world" from="World" to="HUD/HUD/Console" method="_on_World_generated_world"]
[connection signal="generated_world" from="World" to="HUD/HUD/Pause" method="_on_World_generated_world"]
[connection signal="generated_world" from="World" to="Player" method="_on_generated_world"]
